<resources>
    <string name="app_name" translatable="false">MovieExamPrep</string>
    <string name="action_settings">Settings</string>
    <string name="loading">Loading..</string>
    <string name="serach_hint">Search..</string>
    <string name="no_results">No results.</string>
    <string name="content_desc_movie_thumbnail">Movie Image Thumbnail</string>
    <string name="thumbnail_width" translatable="false">w50</string>
    <string name="transition_name_thumbnail" translatable="false">thumbnail_transition</string>
    <string name="transition_name_title" translatable="false">title_transition</string>
    <string name="transition_name_overview" translatable="false">overview_transition</string>
    <string name="movie_title_sample" translatable="false">Flowers of War</string>
    <string name="movie_overview_sample" translatable="false">A westerner hides in an orphange in China while Japan occupied parts during WWII. He proceeds to impersonate the priest and attempts to save the young girls who life there.</string>
    <string name="settings_activity_title">Settings</string>
    <string name="label_silence_notifications">Silence notifications</string>
    <string name="chagne_language">Change Language</string>
    <string name="language_sample_text" translatable="false">en-EN</string>
    <string name="button_label_remind">Remind me about this</string>
    <string name="notification_channel_name">Movie Reminders</string>
    <string name="channel_description">Reminds user of movies they\'ve marked an interest in.</string>
    <string name="reminder_set">Reminder set!</string>
    <string name="undo_string">Undo</string>
    <string name="thanks_string">Thanks!</string>
    <string name="notificions_on_silent">Reminder not set: notifications are currently set to silent.</string>
    <string name="no_results_found">No results found.</string>
</resources>
